# Midi-Keyboard

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  compile_commands.json
.github/workflows/: ci.yml
include/: arpeggiator.hpp  midi.hpp  midi_out.hpp
src/: arpeggiator.cpp  main.cpp  midi.cpp  midi_out.cpp
